--- a/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
+++ b/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
@@ -602,6 +602,19 @@ attendance) or above (for no attendance) that target. Across the four
 waves, these shifts form a sequence \(\boldsymbol{\bar{d}}\), which
 defines a complete intervention regime.
 
+\begin{table}
+
+\caption{\label{tbl-intervention}Causal diagrams showing sources of bias
+in a three wave panel study.}
+
+\centering{
+
+\tvtable
+
+}
+
+\end{table}%
+
 \subsubsection{Causal Contrast}\label{causal-contrast}
 
 We compare the average well-being under the \textbf{regular attendance}
@@ -1192,6 +1205,717 @@ Values Study Daily Data Collection: Time 11 - Time 15.}
 \subsection{Appendix B: Measures and Demographic
 Statistics}\label{appendix-baseline}
 
+\subsection{Measures}\label{measures}
+
+\subsection{Baseline Variables}\label{baseline-variables}
+
+\paragraph{Age}\label{age}
+
+\emph{What is your date of birth?}
+
+We asked participants' ages in an open-ended question (``What is your
+age?'' or ``What is your date of birth''). Developed for the NZAVS.
+
+\paragraph{Agreeableness}\label{agreeableness}
+
+\begin{itemize}
+\tightlist
+\item
+  I sympathize with others' feelings.
+\item
+  I am not interested in other people's problems.
+\item
+  I feel others' emotions.
+\item
+  I am not really interested in others (reversed).
+\end{itemize}
+
+Mini-IPIP6 Agreeableness dimension: (i) I sympathize with others'
+feelings. (ii) I am not interested in other people's problems. (r) (iii)
+I feel others' emotions. (iv) I am not really interested in others. (r)
+(\citeproc{ref-sibley2011}{Sibley \emph{et al.} 2011})
+
+\paragraph{Alcohol Frequency}\label{alcohol-frequency}
+
+\emph{``How often do you have a drink containing alcohol?''}
+
+Participants could chose between the following responses: `(1 = Never -
+I don't drink, 2 = Monthly or less, 3 = Up to 4 times a month, 4 = Up to
+3 times a week, 5 = 4 or more times a week, 6 = Don't know)'
+(\citeproc{ref-Ministry_of_Health_2013}{Health 2013})
+
+\paragraph{Alcohol Intensity}\label{alcohol-intensity}
+
+\emph{``How many drinks containing alcohol do you have on a typical day
+when drinking alcohol? (number of drinks on a typical day when
+drinking)''}
+
+Participants responded using an open-ended box.
+(\citeproc{ref-Ministry_of_Health_2013}{Health 2013})
+
+\paragraph{Belong}\label{belong}
+
+\begin{itemize}
+\tightlist
+\item
+  Know that people in my life accept and value me.
+\item
+  Feel like an outsider (reversed).
+\item
+  Know that people around me share my attitudes and beliefs.
+\end{itemize}
+
+We assessed felt belongingness with three items adapted from the Sense
+of Belonging Instrument (Hagerty \& Patusky, 1995): (1) ``Know that
+people in my life accept and value me''; (2) ``Feel like an outsider'';
+(3) ``Know that people around me share my attitudes and beliefs''.
+Participants responded on a scale from 1 (Very Inaccurate) to 7 (Very
+Accurate). The second item was reversely coded.
+(\citeproc{ref-hagerty1995}{Hagerty and Patusky 1995})
+
+\paragraph{Born in NZ}\label{born-in-nz}
+
+**
+
+We asked participants, ``Which country were you born in?'' or ``Where
+were you born? (please be specific, e.g., which town/city?)'' (waves:
+6-15). Developed for the NZAVS.
+
+\paragraph{Conscientiousness}\label{conscientiousness}
+
+\begin{itemize}
+\tightlist
+\item
+  I get chores done right away.
+\item
+  I like order.
+\item
+  I make a mess of things.
+\item
+  I often forget to put things back in their proper place.
+\end{itemize}
+
+Mini-IPIP6 Conscientiousness dimension: (i) I get chores done right
+away. (ii) I like order. (iii) I make a mess of things. (r) (iv) I often
+forget to put things back in their proper place. (r)
+(\citeproc{ref-sibley2011}{Sibley \emph{et al.} 2011})
+
+\paragraph{Education Level}\label{education-level}
+
+\emph{What is your highest level of qualification?}
+
+We asked participants, ``What is your highest level of qualification?''.
+We coded participans highest finished degree according to the New
+Zealand Qualifications Authority. Ordinal-Rank 0-10 NZREG codes (with
+overseas school qualifications coded as Level 3, and all other ancillary
+categories coded as missing) Developed for the NZAVS.
+
+\paragraph{Employed (binary)}\label{employed-binary}
+
+\emph{Are you currently employed (This includes self-employed of casual
+work)?}
+
+Binary response: (0 = No, 1 = Yes) Stats NZ Census Question
+
+\paragraph{Ethnicity}\label{ethnicity}
+
+\emph{Which ethnic group(s) do you belong to?}
+
+Coded string: (1 = New Zealand European; 2 = Māori; 3 = Pacific; 4 =
+Asian) NZ Census coding.
+
+\paragraph{Extraversion}\label{extraversion}
+
+\begin{itemize}
+\tightlist
+\item
+  I am the life of the party.
+\item
+  I don't talk a lot (reversed).
+\item
+  I keep in the background (reversed).
+\item
+  I talk to a lot of different people at parties.
+\end{itemize}
+
+Mini-IPIP6 Extraversion dimension: (i) I am the life of the party. (ii)
+I don't talk a lot. (r) (iii) I keep in the background. (r) (iv) I talk
+to a lot of different people at parties.
+(\citeproc{ref-sibley2011}{Sibley \emph{et al.} 2011})
+
+\paragraph{Hlth Disability Binary}\label{hlth-disability-binary}
+
+**
+
+We assessed disability with a one-item indicator adapted from Verbrugge
+(1997). It asks, ``Do you have a health condition or disability that
+limits you and that has lasted for 6+ months?'' (1 = Yes, 0 = No).
+(\citeproc{ref-verbrugge1997}{Verbrugge 1997})
+
+\paragraph{Honesty Humility}\label{honesty-humility}
+
+\begin{itemize}
+\tightlist
+\item
+  I feel entitled to more of everything (reversed).
+\item
+  I deserve more things in life (reversed).
+\item
+  I deserve more things in life (reversed).
+\item
+  I would get a lot of pleasure from owning expensive luxury goods
+  (reversed).
+\end{itemize}
+
+Mini-IPIP6 Honesty-Humility dimension: (i) I feel entitled to more of
+everything. (r) (ii) I deserve more things in life. (r) (iii) I would
+like to be seen driving around in a very expensive car. (r) (iv) I would
+get a lot of pleasure from owning expensive luxury goods. (r)
+(\citeproc{ref-sibley2011}{Sibley \emph{et al.} 2011})
+
+\paragraph{Log Hours Children}\label{log-hours-children}
+
+\emph{Hours spent\ldots looking after children.}
+
+We took the natural log of the response + 1.
+(\citeproc{ref-sibley2011}{Sibley \emph{et al.} 2011})
+
+\paragraph{Log Hours Commute}\label{log-hours-commute}
+
+\emph{Hours spent\ldots travelling/commuting.}
+
+We took the natural log of the response + 1. Developed for the NZAVS.
+
+\paragraph{Log Hours Exercise}\label{log-hours-exercise}
+
+\emph{Hours spent\ldots exercising/physical activity.}
+
+We took the natural log of the response + 1.
+(\citeproc{ref-sibley2011}{Sibley \emph{et al.} 2011})
+
+\paragraph{Log Hours Housework}\label{log-hours-housework}
+
+\emph{Hours spent\ldots housework/cooking.}
+
+We took the natural log of the response + 1.
+(\citeproc{ref-sibley2011}{Sibley \emph{et al.} 2011})
+
+\paragraph{Log Household Income}\label{log-household-income}
+
+\emph{Please estimate your total household income (before tax) for the
+year XXXX.}
+
+We took the natural log of the response + 1. Developed for the NZAVS.
+
+\paragraph{Male (binary)}\label{male-binary}
+
+**
+
+We asked participants' gender in an open-ended question: ``what is your
+gender?'' or ``Are you male or female?'' (waves: 1-5). Female was coded
+as 0, Male was coded as 1, and gender diverse coded as 3 (Fraser et al.,
+2020). (or 0.5 = neither female nor male). Here, we coded all those who
+responded as Male as 1, and those who did not as 0.
+(\citeproc{ref-fraser_coding_2020}{Fraser \emph{et al.} 2020})
+
+\paragraph{Neuroticism}\label{neuroticism}
+
+\begin{itemize}
+\tightlist
+\item
+  I have frequent mood swings.
+\item
+  I am relaxed most of the time (reversed).
+\item
+  I get upset easily.
+\item
+  I seldom feel blue (reversed).
+\end{itemize}
+
+Mini-IPIP6 Neuroticism dimension: (i) I have frequent mood swings. (ii)
+I am relaxed most of the time. (r) (iii) I get upset easily. (iv) I
+seldom feel blue. (r) (\citeproc{ref-sibley2011}{Sibley \emph{et al.}
+2011})
+
+\paragraph{Not Heterosexual Binary}\label{not-heterosexual-binary}
+
+\emph{How would you describe your sexual orientation? (e.g.,
+heterosexual, homosexual, straight, gay, lesbian, bisexual, etc.)}
+
+Open-ended question, coded as binary (not heterosexual = 1).
+(\citeproc{ref-greaves2017diversity}{Greaves \emph{et al.} 2017})
+
+\paragraph{NZ Deprevation Index 2018}\label{nz-deprevation-index-2018}
+
+\emph{New Zealand Deprivation - Decile Index - Using 2018 Census Data}
+
+Numerical: (1-10) (\citeproc{ref-atkinson2019}{Atkinson \emph{et al.}
+2019})
+
+\paragraph{NZSEI (Occupational Prestige
+Index)}\label{nzsei-occupational-prestige-index}
+
+**
+
+We assessed occupational prestige and status using the New Zealand
+Socio-economic Index 13 (NZSEI-13) (Fahy et al., 2017). This index uses
+the income, age, and education of a reference group, in this case, the
+2013 New Zealand census, to calculate a score for each occupational
+group. Scores range from 10 (Lowest) to 90 (Highest). This list of index
+scores for occupational groups was used to assign each participant a
+NZSEI-13 score based on their occupation. (\citeproc{ref-fahy2017}{Fahy
+\emph{et al.} 2017})
+
+\paragraph{Openness}\label{openness}
+
+\begin{itemize}
+\tightlist
+\item
+  I have a vivid imagination.
+\item
+  I have difficulty understanding abstract ideas (reversed).
+\item
+  I do not have a good imagination (reversed).
+\item
+  I am not interested in abstract ideas (reversed).
+\end{itemize}
+
+Mini-IPIP6 Openness to Experience dimension: (i) I have a vivid
+imagination. (ii) I have difficulty understanding abstract ideas. (r)
+(iii) I do not have a good imagination. (r) (iv) I am not interested in
+abstract ideas. (r) (\citeproc{ref-sibley2011}{Sibley \emph{et al.}
+2011})
+
+\paragraph{Parent (binary)}\label{parent-binary}
+
+**
+
+We asked participants, ``If you are a parent, what is the birth date of
+your eldest child?'' or ``If you are a parent, in which year was your
+eldest child born?'' (waves: 10-current). Parents were coded as 1, while
+the others were coded as 0. Developed for the NZAVS.
+
+\paragraph{Partner Binary}\label{partner-binary}
+
+\emph{What is your relationship status? (e.g., single, married,
+de-facto, civil union, widowed, living together, etc.)}
+
+Coded as binary (has partner = 1). Developed for the NZAVS.
+
+\paragraph{Political Conservative}\label{political-conservative}
+
+\emph{Please rate how politically liberal versus conservative you see
+yourself as being.}
+
+Ordinal response: (1 = Extremely Liberal, 7 = Extremely Conservative)
+(\citeproc{ref-jost_end_2006-1}{Jost 2006})
+
+\paragraph{Power No Control Composite}\label{power-no-control-composite}
+
+\begin{itemize}
+\tightlist
+\item
+  I do not have enough power or control over important parts of my life.
+\item
+  Other people have too much power or control over important parts of my
+  life.
+\end{itemize}
+
+Ordinal response: (1 = Strongly Disagree, 7 = Strongly Agree)
+(\citeproc{ref-overall2016power}{Overall \emph{et al.} 2016})
+
+\paragraph{Rural Gch 2018 Levels}\label{rural-gch-2018-levels}
+
+\emph{High Urban Accessibility = 1, Medium Urban Accessibility = 2, Low
+Urban Accessibility = 3, Remote = 4, Very Remote = 5.}
+
+``Participants residence locations were coded according to a five-level
+ordinal categorisation ranging from Urban to Rural.''
+(\citeproc{ref-whitehead2023unmasking}{Whitehead \emph{et al.} 2023})
+
+\paragraph{Right Wing
+Authoritarianism}\label{right-wing-authoritarianism}
+
+\begin{itemize}
+\tightlist
+\item
+  It is always better to trust the judgment of the proper authorities in
+  government and religion than to listen to the noisy rabble-rousers in
+  our society who are trying to create doubt in people's minds.
+\item
+  It would be best for everyone if the proper authorities censored
+  magazines so that people could not get their hands on trashy and
+  disgusting material.
+\item
+  Our country will be destroyed some day if we do not smash the
+  perversions eating away at our moral fibre and traditional beliefs.
+\item
+  People should pay less attention to The Bible and other old
+  traditional forms of religious guidance, and instead develop their own
+  personal standards of what is moral and immoral.
+\item
+  Atheists and others who have rebelled against established religions
+  are no doubt every bit as good and virtuous as those who attend church
+  regularly.
+\item
+  Some of the best people in our country are those who are challenging
+  our government, criticizing religion, and ignoring the ``normal way''
+  things are supposed to be done (reversed).
+\end{itemize}
+
+(\citeproc{ref-altemeyer1996authoritarian}{Altemeyer 1996})
+
+\paragraph{Sample Frame Opt-In
+(binary)}\label{sample-frame-opt-in-binary}
+
+\emph{Participant was not randomly sampled from the New Zealand
+Electoral Roll.}
+
+Code string (Binary): (0 = No, 1 = Yes) Developed for the NZAVS.
+
+\paragraph{Social Dominance
+Orientation}\label{social-dominance-orientation}
+
+\begin{itemize}
+\tightlist
+\item
+  It is OK if some groups have more of a chance in life than others.
+\item
+  Inferior groups should stay in their place.
+\item
+  To get ahead in life, it is sometimes okay to step on other groups.
+\item
+  We should have increased social equality (reversed).
+\item
+  It would be good if groups could be equal (reversed).
+\item
+  We should do what we can to equalise conditions for different groups
+  (reversed).
+\end{itemize}
+
+(\citeproc{ref-sidanius1999social}{Sidanius and Pratto 1999})
+
+\paragraph{Smoker (binary)}\label{smoker-binary}
+
+\emph{Do you currently smoke tobacco cigarettes?}
+
+Binary smoking indicator (0 = No, 1 = Yes). Developed for NZAVS.
+
+\subsection{Exposure Variable}\label{exposure-variable}
+
+\paragraph{Monthly Religious Service}\label{monthly-religious-service}
+
+\emph{Do you identify with a religion and/or spiritual group?
+-\textgreater{} How many times did you attend a church or place of
+worship in the last month?}
+
+Numerical: open-ended response (\citeproc{ref-sibley2012}{Sibley and
+Bulbulia 2012})
+
+\subsection{Outcome Variables}\label{outcome-variables}
+
+\subsubsection{Health}\label{health-1}
+
+\paragraph{BMI}\label{bmi-1}
+
+\emph{What is your height? (metres)'' and ``What is your weight? (kg).}
+
+Based on participants indication of their height and weight we
+calculated the BMI by dividing the weight in kilograms by the square of
+the height in meters. Developed for the NZAVS.
+
+\paragraph{Sleep}\label{sleep}
+
+\emph{During the past month, on average, how many hours of actual sleep
+did you get per night?}
+
+Open ended response. (\citeproc{ref-buysse1989pittsburgh}{Buysse
+\emph{et al.} 1989})
+
+\paragraph{Hours of Exercise (log)}\label{hours-of-exercise-log-1}
+
+\emph{Hours spent\ldots exercising/physical activity.}
+
+We took the natural log of the response + 1.
+(\citeproc{ref-sibley2011}{Sibley \emph{et al.} 2011})
+
+\paragraph{Short Form Health}\label{short-form-health}
+
+\emph{In general, would you say your health is\ldots{}}
+
+Ordinal response: (1 = Poor, 7 = Excellent)
+(\citeproc{ref-instrument1992mos}{Instrument Ware Jr and Sherbourne
+1992})
+
+\subsubsection{Psychological}\label{psychological}
+
+\paragraph{Fatigue}\label{fatigue}
+
+\emph{During the last 30 days, how often did \ldots{} you feel
+exhausted?}
+
+Ordinal response: (0 = None Of The Time; 1 = A Little Of The Time; 2=
+Some Of The Time; 3 = Most Of The Time; 4 = All Of The Time)
+(\citeproc{ref-sibley2020}{Sibley \emph{et al.} 2020})
+
+\paragraph{Anxiety}\label{anxiety}
+
+\begin{itemize}
+\tightlist
+\item
+  During the past 30 days, how often did\ldots you feel restless or
+  fidgety?
+\item
+  During the past 30 days, how often did\ldots you feel that everything
+  was an effort?
+\item
+  During the past 30 days, how often did\ldots you feel nervous?
+\end{itemize}
+
+Ordinal response: (0 = None Of The Time; 1 = A Little Of The Time; 2=
+Some Of The Time; 3 = Most Of The Time; 4 = All Of The Time)
+(\citeproc{ref-kessler2002}{Kessler \emph{et al.} 2002})
+
+\paragraph{Depression}\label{depression-1}
+
+\begin{itemize}
+\tightlist
+\item
+  During the past 30 days, how often did\ldots you feel hopeless?
+\item
+  During the past 30 days, how often did\ldots you feel so depressed
+  that nothing could cheer you up?
+\item
+  During the past 30 days, how often did\ldots you feel you feel
+  restless or fidgety?
+\end{itemize}
+
+Ordinal response: (0 = None Of The Time; 1 = A Little Of The Time; 2=
+Some Of The Time; 3 = Most Of The Time; 4 = All Of The Time)
+(\citeproc{ref-kessler2002}{Kessler \emph{et al.} 2002})
+
+\paragraph{Rumination}\label{rumination}
+
+\emph{During the last 30 days, how often did\ldots you have negative
+thoughts that repeated over and over?}
+
+Ordinal responses: 0 = None of The Time, 1 = A little of The Time, 2 =
+Some of The Time, 3 = Most of The Time, 4 = All of The Time.
+(\citeproc{ref-nolen-hoeksema_effects_1993}{Nolen-hoeksema and Morrow
+1993})
+
+\subsubsection{Present Focused}\label{present-focused}
+
+\paragraph{Bodysat}\label{bodysat}
+
+\emph{I am satisfied with the appearance, size and shape of my body.}
+
+Ordinal response scale (1 = Very inaccurate to 7 = Very accurate).
+(\citeproc{ref-stronge2015facebook}{Stronge \emph{et al.} 2015})
+
+\paragraph{Forgiveness}\label{forgiveness}
+
+\begin{itemize}
+\tightlist
+\item
+  Sometimes I can't sleep because of thinking about past wrongs I have
+  suffered.
+\item
+  I can usually forgive and forget when someone does me wrong.
+\item
+  I find myself regularly thinking about past times that I have been
+  wronged.
+\end{itemize}
+
+We assessed participants' forgiveness using reversed scores of a the
+NZAVS ``vengeful rumination scale.'' This scale contains three items,
+adapted from Caprara (\citeproc{ref-caprara_indicators_1986}{1986}) and
+Berry \emph{et al.} (\citeproc{ref-berry_forgivingness_2005}{2005}), and
+developed for NZAVS, ordinal response scale 1-7 (1 = Strongly Disagree
+to 7 = Strongly Agree). Combines Berry \emph{et al.}
+(\citeproc{ref-berry_forgivingness_2005}{2005}) and Caprara
+(\citeproc{ref-caprara_indicators_1986}{1986}).
+
+\paragraph{Perfectionism}\label{perfectionism}
+
+\begin{itemize}
+\tightlist
+\item
+  Doing my best never seems to be enough.
+\item
+  My performance rarely measures up to my standards.
+\item
+  I am hardly ever satisfied with my performance.
+\end{itemize}
+
+Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
+(\citeproc{ref-rice_short_2014}{Rice \emph{et al.} 2014})
+
+\paragraph{Pwb Standard Living}\label{pwb-standard-living-1}
+
+\emph{Please rate your level of satisfaction with the following aspects
+of your life\ldots Your standard of living.}
+
+Ordinal response (0 = completely dissatisfied to 10 = completely
+satisfied). (\citeproc{ref-cummins_developing_2003}{Cummins \emph{et
+al.} 2003})
+
+\paragraph{Pwb your Future Security}\label{pwb-your-future-security}
+
+\emph{Please rate your level of satisfaction with the following aspects
+of your life\ldots Your future security.}
+
+Ordinal response (0 = completely dissatisfied to 10 = completely
+satisfied). (\citeproc{ref-cummins_developing_2003}{Cummins \emph{et
+al.} 2003})
+
+\paragraph{Pwb your Health}\label{pwb-your-health}
+
+\emph{Please rate your level of satisfaction with the following aspects
+of your life\ldots Your health.}
+
+Ordinal response (0 = completely dissatisfied to 10 = completely
+satisfied). (\citeproc{ref-cummins_developing_2003}{Cummins \emph{et
+al.} 2003})
+
+\paragraph{Pwb your Relationships}\label{pwb-your-relationships}
+
+\emph{Please rate your level of satisfaction with the following aspects
+of your life\ldots Your personal relationships.}
+
+Ordinal response (0 = completely dissatisfied to 10 = completely
+satisfied). (\citeproc{ref-cummins_developing_2003}{Cummins \emph{et
+al.} 2003})
+
+\paragraph{Self Control Have Lots}\label{self-control-have-lots}
+
+\emph{In general, I have a lot of self-control.}
+
+Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
+(\citeproc{ref-tangney_high_2004}{Tangney \emph{et al.} 2004})
+
+\paragraph{Self Control Wish more
+Reversed}\label{self-control-wish-more-reversed}
+
+\emph{I wish I had more self-discipline.}
+
+Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
+(\citeproc{ref-tangney_high_2004}{Tangney \emph{et al.} 2004})
+
+\paragraph{Self Esteem}\label{self-esteem}
+
+\begin{itemize}
+\tightlist
+\item
+  On the whole am satisfied with myself.
+\item
+  Take a positive attitude toward myself.
+\item
+  Am inclined to feel that I am a failure (reversed).
+\end{itemize}
+
+Ordinal response (1 = Very inaccurate to 7 = Very accurate).
+(\citeproc{ref-Rosenberg1965}{Rosenberg 1965})
+
+\paragraph{Sexual Satisfaction}\label{sexual-satisfaction-1}
+
+\emph{How satisfied are you with your sex life?}
+
+Participants were asked to report their sexual orientation; ordinal
+response: 1 = Not satisfied to 7 = Very satisfied. Developed for the
+NZAVS
+
+\subsubsection{Life Focused}\label{life-focused}
+
+\paragraph{Gratitude}\label{gratitude-1}
+
+\begin{itemize}
+\tightlist
+\item
+  I have much in my life to be thankful for.
+\item
+  When I look at the world, I don't see much to be grateful for
+  (reversed).
+\item
+  I am grateful to a wide variety of people.
+\end{itemize}
+
+Ordinal response scale 1 = Strongly Disagree to 7 = Strongly Agree.
+(\citeproc{ref-mccullough_grateful_2002}{McCullough \emph{et al.} 2002})
+
+\paragraph{Lifesat}\label{lifesat}
+
+\begin{itemize}
+\tightlist
+\item
+  I am satisfied with my life.
+\item
+  In most ways my life is close to ideal.
+\end{itemize}
+
+Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
+(\citeproc{ref-diener1985a}{Diener \emph{et al.} 1985})
+
+\paragraph{Meaning Purpose}\label{meaning-purpose-1}
+
+\emph{My life has a clear sense of purpose}
+
+Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
+(\citeproc{ref-steger_meaning_2006}{Steger \emph{et al.} 2006})
+
+\paragraph{Meaning Sense}\label{meaning-sense-1}
+
+\emph{I have a good sense of what makes my life meaningful.}
+
+Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
+(\citeproc{ref-steger_meaning_2006}{Steger \emph{et al.} 2006})
+
+\subsubsection{Social}\label{social}
+
+\paragraph{Belonging}\label{belonging-1}
+
+\begin{itemize}
+\tightlist
+\item
+  Know that people in my life accept and value me.
+\item
+  Feel like an outsider (reversed).
+\item
+  Know that people around me share my attitudes and beliefs.
+\end{itemize}
+
+We assessed felt belongingness with three items adapted from the Sense
+of Belonging Instrument (Hagerty \& Patusky, 1995): (1) ``Know that
+people in my life accept and value me''; (2) ``Feel like an outsider'';
+(3) ``Know that people around me share my attitudes and beliefs''.
+Participants responded on a scale from 1 (Very Inaccurate) to 7 (Very
+Accurate). The second item was reversely coded.
+(\citeproc{ref-hagerty1995}{Hagerty and Patusky 1995})
+
+\paragraph{Community Belonging}\label{community-belonging}
+
+\emph{I feel a sense of community with others in my local
+neighbourhood.}
+
+Ordinal response (1 = Strongly Disagree to 7 = Strongly Agree).
+(\citeproc{ref-sengupta2013}{Sengupta \emph{et al.} 2013})
+
+\paragraph{Support}\label{support}
+
+\begin{itemize}
+\tightlist
+\item
+  There are people I can depend on to help me if I really need it.
+\item
+  There is no one I can turn to for guidance in times of stress
+  (reversed).
+\item
+  I know there are people I can turn to when I need help.
+\end{itemize}
+
+Ordinal response: (1 = Strongly Disagree, 7 = Strongly Agree)
+(\citeproc{ref-cutrona1987}{Cutrona and Russell 1987})
+
 \subsubsection{Sample Demographic
 Statistics}\label{sample-demographic-statistics}
 
@@ -1427,6 +2151,16 @@ Attitudes and Values Cohort waves 2018.}
 \subsubsection{Exposure Variable: Religious Service
 Attendance}\label{appendix-exposure}
 
+(\citeproc{ref-tble-sample-exposures}{\textbf{tble-sample-exposures?}})
+presents sample statistic for the exposure variable, religious service
+attendance, during the baseline wave and exposure waves. This variable
+was not measured in part of NZAVS time 12 (years 2020-2021) and part of
+NZAVS time 13 (years 2021-2022). To address missingness, we carried the
+previous observation forward, which may result in conservative causal
+effect estimation, however it would be unlike to bias estimation away
+from the null because the measurement error is random, and cannot be
+systematically related to the outcomes.
+
 \begingroup\fontsize{12}{14}\selectfont
 \begingroup\fontsize{8}{10}\selectfont
 
@@ -1471,7 +2205,7 @@ Zealand Attitudes and Values Cohort waves 2018.}
 
 \newpage{}
 
-\subsubsection{Baseline and Outcome Variables}\label{appendix-outcomes}
+\subsubsection{Outcome Variables}\label{appendix-outcomes}
 
 \subsubsection{Health Outcome Variables}\label{health-outcome-variables}
 
@@ -1772,6 +2506,8 @@ variables measured at baseline (NZAVS time 10, years 2018-2019, and time
 \endgroup{}
 \endgroup{}
 
+\newpage{}
+
 \subsection{Appendix C: Confouding
 Control}\label{appendix-c-confouding-control}
 
@@ -1782,7 +2518,7 @@ three wave panel study.}
 
 \centering{
 
-\threewavepaneltwo
+\tvtable
 
 }
 
@@ -1857,8 +2593,27 @@ diagonal relative to the off-diagonal entries in the same row indicates
 greater stability in a state. Conversely, higher off-diagonal numbers
 suggest more frequent shifts from the baseline state to other states.
 
+\newpage{}
+
+\subsection*{References}\label{references}
+\addcontentsline{toc}{subsection}{References}
+
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-altemeyer1996authoritarian}
+Altemeyer, B (1996) \emph{The authoritarian spectre}, London: Harvard
+University Press.
+
+\bibitem[\citeproctext]{ref-atkinson2019}
+Atkinson, J, Salmond, C, and Crampton, P (2019) \emph{NZDep2018 index of
+deprivation, user{'}s manual.}, Wellington.
+
+\bibitem[\citeproctext]{ref-berry_forgivingness_2005}
+Berry, JW, Worthington Jr., EL, O'Connor, LE, Parrott III, L, and Wade,
+NG (2005) Forgivingness, vengeful rumination, and affective traits.
+\emph{Journal of Personality}, \textbf{73}(1), 183--226.
+doi:\href{https://doi.org/10.1111/j.1467-6494.2004.00308.x}{10.1111/j.1467-6494.2004.00308.x}.
+
 \bibitem[\citeproctext]{ref-bono2004gratitude}
 Bono, G, Emmons, RA, and McCullough, ME (2004) Gratitude in practice and
 the practice of gratitude. \emph{Positive Psychology in Practice},
@@ -1895,6 +2650,18 @@ Bulbulia, JA (2024c) Methods in causal inference part 1: Causal diagrams
 and confounding. \emph{Evolutionary Human Sciences}, \textbf{6}, e40.
 doi:\href{https://doi.org/10.1017/ehs.2024.35}{10.1017/ehs.2024.35}.
 
+\bibitem[\citeproctext]{ref-buysse1989pittsburgh}
+Buysse, DJ, Reynolds III, CF, Monk, TH, Berman, SR, and Kupfer, DJ
+(1989) The pittsburgh sleep quality index: A new instrument for
+psychiatric practice and research. \emph{Psychiatry Research},
+\textbf{28}(2), 193--213.
+
+\bibitem[\citeproctext]{ref-caprara_indicators_1986}
+Caprara, GV (1986) Indicators of aggression: The dissipation-rumination
+scale. \emph{Personality and Individual Differences}, \textbf{7}(6),
+763--769.
+doi:\href{https://doi.org/10.1016/0191-8869(86)90074-7}{10.1016/0191-8869(86)90074-7}.
+
 \bibitem[\citeproctext]{ref-xgboost2023}
 Chen, T, He, T, Benesty, M, \ldots{} Yuan, J (2023) \emph{Xgboost:
 Extreme gradient boosting}. Retrieved from
@@ -1910,6 +2677,18 @@ Epidemiology}, \textbf{49}(6), 2030--2040.
 Chen, Y, Weziak-Bialowolska, D, Lee, MT, Bialowolski, P, McNeely, E, and
 VanderWeele, TJ (2022) Longitudinal associations between domains of
 flourishing. \emph{Scientific Reports}, \textbf{12}(1), 2740.
+
+\bibitem[\citeproctext]{ref-cummins_developing_2003}
+Cummins, RA, Eckersley, R, Pallant, J, Vugt, J van, and Misajon, R
+(2003) Developing a national index of subjective wellbeing: The
+australian unity wellbeing index. \emph{Social Indicators Research},
+\textbf{64}(2), 159--190.
+doi:\href{https://doi.org/10.1023/A:1024704320683}{10.1023/A:1024704320683}.
+
+\bibitem[\citeproctext]{ref-cutrona1987}
+Cutrona, CE, and Russell, DW (1987) The provisions of social
+relationships and adaptation to stress. \emph{Advances in Personal
+Relationships}, \textbf{1}, 37--67.
 
 \bibitem[\citeproctext]{ref-dew2020joint}
 Dew, JP, Uecker, JE, and Willoughby, BJ (2020) Joint religiosity and
@@ -1929,10 +2708,42 @@ causal effects based on longitudinal modified treatment policies.
 \textbf{118}(542), 846--857.
 doi:\href{https://doi.org/10.1080/01621459.2021.1955691}{10.1080/01621459.2021.1955691}.
 
+\bibitem[\citeproctext]{ref-diener1985a}
+Diener, E, Emmons, RA, Larsen, RJ, and Griffin, S (1985) The
+Satisfaction With Life Scale. \emph{Journal of Personality Assessment},
+\textbf{49}(1), 71--75.
+
 \bibitem[\citeproctext]{ref-dunbar2021religiosity}
 Dunbar, RI (2021) Religiosity and religious attendance as factors in
 wellbeing and social engagement. \emph{Religion, Brain \& Behavior},
 \textbf{11}(1), 17--26.
+
+\bibitem[\citeproctext]{ref-fahy2017}
+Fahy, KM, Lee, A, and Milne, BJ (2017) \emph{{N}ew {Z}ealand
+socio-economic index 2013}, Wellington, New Zealand: Statistics New
+Zealand-Tatauranga Aotearoa.
+
+\bibitem[\citeproctext]{ref-fraser_coding_2020}
+Fraser, G, Bulbulia, J, Greaves, LM, Wilson, MS, and Sibley, CG (2020)
+Coding responses to an open-ended gender measure in a {N}ew {Z}ealand
+national sample. \emph{The Journal of Sex Research}, \textbf{57}(8),
+979--986.
+doi:\href{https://doi.org/10.1080/00224499.2019.1687640}{10.1080/00224499.2019.1687640}.
+
+\bibitem[\citeproctext]{ref-greaves2017diversity}
+Greaves, LM, Barlow, FK, Lee, CH, et al.others (2017) The diversity and
+prevalence of sexual orientation self-labels in a {N}ew {Z}ealand
+national sample. \emph{Archives of Sexual Behavior}, \textbf{46},
+1325--1336.
+
+\bibitem[\citeproctext]{ref-hagerty1995}
+Hagerty, BMK, and Patusky, K (1995) Developing a Measure Of Sense of
+Belonging: \emph{Nursing Research}, \textbf{44}(1), 9--13.
+doi:\href{https://doi.org/10.1097/00006199-199501000-00003}{10.1097/00006199-199501000-00003}.
+
+\bibitem[\citeproctext]{ref-Ministry_of_Health_2013}
+Health, Ministry of (2013) \emph{The {N}ew {Z}ealand {H}ealth {S}urvey:
+Content guide 2012-2013}, Princeton University Press.
 
 \bibitem[\citeproctext]{ref-hernan2024WHATIF}
 Hernan, MA, and Robins, JM (2024) \emph{Causal inference: What if?},
@@ -1964,11 +2775,28 @@ association of corticosteroids with COVID-19 mortality. \emph{JAMA
 Network Open}, \textbf{5}(10), e2234425.
 doi:\href{https://doi.org/10.1001/jamanetworkopen.2022.34425}{10.1001/jamanetworkopen.2022.34425}.
 
+\bibitem[\citeproctext]{ref-instrument1992mos}
+Instrument Ware Jr, J, and Sherbourne, C (1992) The MOS 36-item
+short-form health survey (SF-36): I. Conceptual framework and item
+selection. \emph{Medical Care}, \textbf{30}(6), 473--483.
+
 \bibitem[\citeproctext]{ref-jokela2024_church}
 Jokela, M, and Laakasuo, M (2024) Health trajectories of individuals who
 quit active religious attendance: Analysis of four prospective cohort
 studies in the united states. \emph{Social Psychiatry and Psychiatric
 Epidemiology}, \textbf{59}(5), 871--878.
+
+\bibitem[\citeproctext]{ref-jost_end_2006-1}
+Jost, JT (2006) The end of the end of ideology. \emph{American
+Psychologist}, \textbf{61}(7), 651--670.
+doi:\href{https://doi.org/10.1037/0003-066X.61.7.651}{10.1037/0003-066X.61.7.651}.
+
+\bibitem[\citeproctext]{ref-kessler2002}
+Kessler, R~C, Andrews, G, Colpe, L~J, \ldots{} Zaslavsky, A~M (2002)
+Short screening scales to monitor population prevalences and trends in
+non-specific psychological distress. \emph{Psychological Medicine},
+\textbf{32}(6), 959--976.
+doi:\href{https://doi.org/10.1017/S0033291702006074}{10.1017/S0033291702006074}.
 
 \bibitem[\citeproctext]{ref-koenig2012handbook}
 Koenig, HG, King, D, and Carson, VB (2012) \emph{Handbook of religion
@@ -1986,10 +2814,28 @@ analysis for unmeasured confounding in observational studies using
 e-values: The evalue package. \emph{The Stata Journal}, \textbf{20}(1),
 162--175.
 
+\bibitem[\citeproctext]{ref-mccullough_grateful_2002}
+McCullough, ME, Emmons, RA, and Tsang, J-A (2002) The grateful
+disposition: A conceptual and empirical topography. \emph{Journal of
+Personality and Social Psychology}, \textbf{82}(1), 112--127.
+doi:\href{https://doi.org/10.1037/0022-3514.82.1.112}{10.1037/0022-3514.82.1.112}.
+
 \bibitem[\citeproctext]{ref-mccullough2001gratitude}
 McCullough, ME, Kilpatrick, SD, Emmons, RA, and Larson, DB (2001) Is
 gratitude a moral affect? \emph{Psychological Bulletin},
 \textbf{127}(2), 249.
+
+\bibitem[\citeproctext]{ref-nolen-hoeksema_effects_1993}
+Nolen-hoeksema, S, and Morrow, J (1993) Effects of rumination and
+distraction on naturally occurring depressed mood. \emph{Cognition and
+Emotion}, \textbf{7}(6), 561--570.
+doi:\href{https://doi.org/10.1080/02699939308409206}{10.1080/02699939308409206}.
+
+\bibitem[\citeproctext]{ref-overall2016power}
+Overall, NC, Hammond, MD, McNulty, JK, and Finkel, EJ (2016) When power
+shapes interpersonal behavior: Low relationship power predicts men's
+aggressive responses to low situational power. \emph{Journal of
+Personality and Social Psychology}, \textbf{111}(2), 195.
 
 \bibitem[\citeproctext]{ref-park2005religion}
 Park, CL (2005) Religion as a meaning-making framework in coping with
@@ -2010,6 +2856,22 @@ Polley, E, LeDell, E, Kennedy, C, and Laan, M van der (2023a)
 Polley, E, LeDell, E, Kennedy, C, and van der Laan, M (2023b)
 \emph{SuperLearner: Super learner prediction}. Retrieved from
 \url{https://github.com/ecpolley/SuperLearner}
+
+\bibitem[\citeproctext]{ref-rice_short_2014}
+Rice, KG, Richardson, CME, and Tueller, S (2014) The short form of the
+revised almost perfect scale. \emph{Journal of Personality Assessment},
+\textbf{96}(3), 368--379.
+doi:\href{https://doi.org/10.1080/00223891.2013.838172}{10.1080/00223891.2013.838172}.
+
+\bibitem[\citeproctext]{ref-Rosenberg1965}
+Rosenberg, M (1965) \emph{Society and the adolescent self-image},
+Princeton, NJ: Princeton University Press.
+
+\bibitem[\citeproctext]{ref-sengupta2013}
+Sengupta, NK, Luyten, N, Greaves, LM, \ldots{} Sibley, CG (2013) Sense
+of Community in {N}ew {Z}ealand Neighbourhoods: A Multi-Level Model
+Predicting Social Capital. \emph{New Zealand Journal of Psychology},
+\textbf{42}(1), 36--45.
 
 \bibitem[\citeproctext]{ref-shaver2024religious}
 Shaver, JH, Chvaja, R, Spake, L, \ldots{} Sosis, R (2024) Religious
@@ -2044,10 +2906,45 @@ Sibley, CG (2021)
 and sample details for the {N}ew {Z}ealand {A}ttitudes and {V}alues
 {S}tudy}}.
 
+\bibitem[\citeproctext]{ref-sibley2020}
+Sibley, CG, Afzali, MU, Satherley, N, \ldots{} others (2020) Prejudice
+toward muslims in {N}ew {Z}ealand: Insights from the {N}ew {Z}ealand
+{A}ttitudes and {V}alues {S}tudy. \emph{New Zealand Journal of
+Psychology}, \textbf{49}(1).
+
+\bibitem[\citeproctext]{ref-sibley2011}
+Sibley, CG, Luyten, N, Purnomo, M, \ldots{} Robertson, A (2011) The
+Mini-IPIP6: Validation and extension of a short measure of the Big-Six
+factors of personality in {N}ew {Z}ealand. \emph{New Zealand Journal of
+Psychology}, \textbf{40}(3), 142--159.
+
+\bibitem[\citeproctext]{ref-sidanius1999social}
+Sidanius, J, and Pratto, F (1999) \emph{Social dominance: An intergroup
+theory of social hierarchy and oppression}, Cambridge: Cambridge
+University Press.
+
 \bibitem[\citeproctext]{ref-sosis2003cooperation}
 Sosis, R, and Bressler, ER (2003) Cooperation and commune longevity: A
 test of the costly signaling theory of religion. \emph{Cross-Cultural
 Research}, \textbf{37}(2), 211--239.
+
+\bibitem[\citeproctext]{ref-steger_meaning_2006}
+Steger, MF, Frazier, P, Oishi, S, and Kaler, M (2006) The meaning in
+life questionnaire: Assessing the presence of and search for meaning in
+life. \emph{Journal of Counseling Psychology}, \textbf{53}(1), 80--93.
+doi:\href{https://doi.org/10.1037/0022-0167.53.1.80}{10.1037/0022-0167.53.1.80}.
+
+\bibitem[\citeproctext]{ref-stronge2015facebook}
+Stronge, S, Greaves, LM, Milojev, P, West-Newman, T, Barlow, FK, and
+Sibley, CG (2015) Facebook is linked to body dissatisfaction: Comparing
+users and non-users. \emph{Sex Roles}, \textbf{73}, 200--213.
+
+\bibitem[\citeproctext]{ref-tangney_high_2004}
+Tangney, JP, Baumeister, RF, and Boone, AL (2004) High self-control
+predicts good adjustment, less pathology, better grades, and
+interpersonal success. \emph{Journal of Personality}, \textbf{72}(2),
+271--324.
+doi:\href{https://doi.org/10.1111/j.0022-3506.2004.00263.x}{10.1111/j.0022-3506.2004.00263.x}.
 
 \bibitem[\citeproctext]{ref-vanderweele2019}
 VanderWeele, TJ (2019) Principles of confounder selection.
@@ -2080,6 +2977,17 @@ doi:\href{https://doi.org/10.7326/M16-2607}{10.7326/M16-2607}.
 VanderWeele, TJ, Mathur, MB, and Chen, Y (2020) Outcome-wide
 longitudinal designs for causal inference: A new template for empirical
 studies. \emph{Statistical Science}, \textbf{35}(3), 437--466.
+
+\bibitem[\citeproctext]{ref-verbrugge1997}
+Verbrugge, LM (1997) A global disability indicator. \emph{Journal of
+Aging Studies}, \textbf{11}(4), 337--362.
+doi:\href{https://doi.org/10.1016/S0890-4065(97)90026-8}{10.1016/S0890-4065(97)90026-8}.
+
+\bibitem[\citeproctext]{ref-whitehead2023unmasking}
+Whitehead, J, Davie, G, Graaf, B de, \ldots{} Nixon, G (2023) Unmasking
+hidden disparities: A comparative observational study examining the
+impact of different rurality classifications for health research in
+aotearoa new zealand. \emph{BMJ Open}, \textbf{13}(4), e067927.
 
 \bibitem[\citeproctext]{ref-williams2021}
 Williams, NT, and Díaz, I (2021) \emph{{l}mtp: Non-parametric causal
